Injiweb 1714 - Redirect to Web Wallet from Verifier and Show Trust Screen to User (#437)
* injiweb-1714 added the routing logic

Signed-off-by: Gurpreet41082 <gurpreet.kaur@thoughtworks.com>

* [MOSIP-1714]

Signed-off-by: jaswanthkumarpolisetty <jaswanthkumar.p@thoughtworks.com>

* [MOSIP-1714]

Signed-off-by: jaswanthkumarpolisetty <jaswanthkumar.p@thoughtworks.com>

* [MOSIP-1714]

Signed-off-by: jaswanthkumarpolisetty <jaswanthkumar.p@thoughtworks.com>

* [MOSIP-1714]

Signed-off-by: jaswanthkumarpolisetty <jaswanthkumar.p@thoughtworks.com>

* [MOSIP-1714]

Signed-off-by: jaswanthkumarpolisetty <jaswanthkumar.p@thoughtworks.com>

* [MOSIP-1714]

Signed-off-by: jaswanthkumarpolisetty <jaswanthkumar.p@thoughtworks.com>

* [MOSIP-1714]

Signed-off-by: jaswanthkumarpolisetty <jaswanthkumar.p@thoughtworks.com>

* [MOSIP-1714]

Signed-off-by: jaswanthkumarpolisetty <jaswanthkumar.p@thoughtworks.com>

* [MOSIP-1714]:Removed the SecondaryBorderedButton and Worked on review comments

Signed-off-by: jaswanthkumarpolisetty <jaswanthkumar.p@thoughtworks.com>

* [injiweb-1714]:Updated cancelConfirmationModal and removed the client side login check

Signed-off-by: jaswanthkumarpolisetty <jaswanthkumar.p@thoughtworks.com>

* [injiweb-1714]: cleared all review comments

Signed-off-by: jaswanthkumarpolisetty <jaswanthkumar.p@thoughtworks.com>

---------

Signed-off-by: Gurpreet41082 <gurpreet.kaur@thoughtworks.com>
Signed-off-by: jaswanthkumarpolisetty <jaswanthkumar.p@thoughtworks.com>
Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>
Co-authored-by: Gurpreet41082 <gurpreet.kaur@thoughtworks.com>

--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -59,13 +59,13 @@
     },
     "QuickTip": {
       "heading": "ನಿಮ್ಮ ಕ್ರೆಡೆನ್ಶಿಯಲ್ಗಳನ್ನು ತಕ್ಷಣ ಡೌನ್‌ಲೋಡ್ ಮಾಡಲು ತ್ವರಿತ ಸಲಹೆಗಳು",
-      "toastText":"ಶೀಘ್ರದಲ್ಲೇ ಬರಲಿದೆ",
+      "toastText": "ಶೀಘ್ರದಲ್ಲೇ ಬರಲಿದೆ",
       "buttontext": "ಇಲ್ಲಿ ಕ್ಲಿಕ್ ಮಾಡಿ"
     },
     "Login": {
       "loginTitle": "ಲಾಗಿನ್ ಮಾಡಿ",
-      "loginDescription":"ನಿಮ್ಮ ಖಾತೆಯನ್ನು ಬಳಸಿಕೊಂಡು ಲಾಗಿನ್ ಮಾಡಿ ಅಥವಾ ನಿಮ್ಮ ಗುರುತುಗಳಿಗೆ ಪ್ರವೇಶಿಸಲು ಅತಿಥಿಯಾಗಿ ಮುಂದುವರೆಯಿರಿ.",
-      "loginNote":"ಅತಿಥಿ ಮೋಡ್‌ನಲ್ಲಿ ಕೆಲವು ವೈಶಿಷ್ಟ್ಯಗಳು ಸೀಮಿತವಾಗಿರಬಹುದು.",
+      "loginDescription": "ನಿಮ್ಮ ಖಾತೆಯನ್ನು ಬಳಸಿಕೊಂಡು ಲಾಗಿನ್ ಮಾಡಿ ಅಥವಾ ನಿಮ್ಮ ಗುರುತುಗಳಿಗೆ ಪ್ರವೇಶಿಸಲು ಅತಿಥಿಯಾಗಿ ಮುಂದುವರೆಯಿರಿ.",
+      "loginNote": "ಅತಿಥಿ ಮೋಡ್‌ನಲ್ಲಿ ಕೆಲವು ವೈಶಿಷ್ಟ್ಯಗಳು ಸೀಮಿತವಾಗಿರಬಹುದು.",
       "loggingIn": "ಲಾಗಿನ್ ಆಗುತ್ತಿದೆ",
       "loginGoogle": "Google ಮೂಲಕ ಮುಂದುವರಿಯಿರಿ",
       "loginGuest": "ಅತಿಥಿಯಾಗಿ ಮುಂದುವರಿಯಿರಿ"
@@ -139,7 +139,7 @@
   "IssuersPage": {
     "Intro": {
       "title": "ನಿಮ್ಮ ಪರಿಶೀಲಿಸಬಹುದಾದ ರುಜುವಾತುಗಳನ್ನು ಪ್ರವೇಶಿಸಿ",
-      "title2":"ಸುಲಭವಾಗಿ!",
+      "title2": "ಸುಲಭವಾಗಿ!",
       "subTitle": "ನಿಮ್ಮ ರುಜುವಾತುಗಳನ್ನು ಸುರಕ್ಷಿತವಾಗಿ ಡೌನ್‌ಲೋಡ್ ಮಾಡಿ ಮತ್ತು ತಕ್ಷಣವೇ ಹಂಚಿಕೊಳ್ಳಿ.",
       "searchText": "ಹೆಸರಿನ ಮೂಲಕ ವಿತರಕರನ್ನು ಹುಡುಕಿ"
     },
@@ -179,7 +179,6 @@
       }
     }
   },
-
   "RedirectionPage": {
     "navigateButton": "ಮನೆಗೆ ಹೋಗಿ",
     "loading": {
@@ -295,7 +294,7 @@
     },
     "item8": {
       "title": "ಇಂಜಿ ವಾಲೆಟ್‌ನ ವೆಬ್ ಇಂಟರ್‌ಫೇಸ್‌ನಲ್ಲಿ ನಾನು ಪರಿಶೀಲಿಸಬಹುದಾದ ರುಜುವಾತು (VC) ಅನ್ನು ರಚಿಸಿದಾಗ ಏನಾಗುತ್ತದೆ?",
-      "description1":"1. ನೀವು ನೀಡುವವರು ಮತ್ತು ರುಜುವಾತು ಪ್ರಕಾರವನ್ನು ಆಯ್ಕೆ ಮಾಡಿ.",
+      "description1": "1. ನೀವು ನೀಡುವವರು ಮತ್ತು ರುಜುವಾತು ಪ್ರಕಾರವನ್ನು ಆಯ್ಕೆ ಮಾಡಿ.",
       "description2": "2. ದೃಢೀಕರಣಕ್ಕಾಗಿ ನೀಡುವವರ ಲಾಗಿನ್ ಪುಟಕ್ಕೆ ಮರುನಿರ್ದೇಶಿಸುತ್ತದೆ.",
       "description3": "3. ಲಾಗಿನ್ ಮಾಡಿದ ನಂತರ, ವಿಸಿಯನ್ನು ವಿತರಕರು ಡುರಿಯನ್ ಬಳಸಿ JSON ಎಂದು ಸುರಕ್ಷಿತವಾಗಿ ಸಂಗ್ರಹಿಸುತ್ತಾರೆ.",
       "description4": "4.VC ವಿವರಗಳೊಂದಿಗೆ PDF ಮತ್ತು QR ಕೋಡ್ ಅನ್ನು ರಚಿಸಲಾಗಿದೆ.",
@@ -311,63 +310,63 @@
     },
     "item11": {
       "title": "Inji Verify ಜೊತೆಗೆ ಆನ್‌ಲೈನ್ ಹಂಚಿಕೆ ವೈಶಿಷ್ಟ್ಯವು ಹೇಗೆ ಕಾರ್ಯನಿರ್ವಹಿಸುತ್ತದೆ?",
-      "description1":"1. VC PDF ಒಂದು QR ಕೋಡ್ ಅನ್ನು ಒಳಗೊಂಡಿದೆ.",
-      "description2":"2. PDF ಅನ್ನು ಫೋನ್‌ನಲ್ಲಿ ಮುದ್ರಿಸಬಹುದು ಅಥವಾ ಉಳಿಸಬಹುದು. ",
-      "description3":"3. ವೆರಿಫೈಯರ್ (ಉದಾ. ಇಂಜಿ ವೆರಿಫೈ) QR ಕೋಡ್ ಅನ್ನು ಸ್ಕ್ಯಾನ್ ಮಾಡುತ್ತದೆ. ",
-      "description4":"4. ಇಂಜಿ ವಾಲೆಟ್ VC ಅನ್ನು ದೃಢೀಕರಿಸುತ್ತದೆ ಮತ್ತು ಪರಿಶೀಲಕರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳುತ್ತದೆ."
+      "description1": "1. VC PDF ಒಂದು QR ಕೋಡ್ ಅನ್ನು ಒಳಗೊಂಡಿದೆ.",
+      "description2": "2. PDF ಅನ್ನು ಫೋನ್‌ನಲ್ಲಿ ಮುದ್ರಿಸಬಹುದು ಅಥವಾ ಉಳಿಸಬಹುದು. ",
+      "description3": "3. ವೆರಿಫೈಯರ್ (ಉದಾ. ಇಂಜಿ ವೆರಿಫೈ) QR ಕೋಡ್ ಅನ್ನು ಸ್ಕ್ಯಾನ್ ಮಾಡುತ್ತದೆ. ",
+      "description4": "4. ಇಂಜಿ ವಾಲೆಟ್ VC ಅನ್ನು ದೃಢೀಕರಿಸುತ್ತದೆ ಮತ್ತು ಪರಿಶೀಲಕರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳುತ್ತದೆ."
     },
     "item12": {
-      "title":"ಪೂರ್ಣ VC ಡೇಟಾದ ಬದಲಿಗೆ QR ಕೋಡ್‌ನಲ್ಲಿ URL ಅನ್ನು ಏಕೆ ಎಂಬೆಡ್ ಮಾಡಬೇಕು?",
-      "description1":"URL ಅನ್ನು ಎಂಬೆಡ್ ಮಾಡುವುದರಿಂದ ಸುಲಭವಾದ ಸ್ಕ್ಯಾನಿಂಗ್‌ಗಾಗಿ QR ಕೋಡ್ ಸಾಂದ್ರತೆಯನ್ನು ಕಡಿಮೆ ಮಾಡುತ್ತದೆ, ಇದು ಸಮರ್ಥ ಅಡ್ಡ-ಸಾಧನ ಅಥವಾ ರಿಮೋಟ್ ಪರಿಶೀಲನೆಯನ್ನು ಅನುಮತಿಸುತ್ತದೆ."
+      "title": "ಪೂರ್ಣ VC ಡೇಟಾದ ಬದಲಿಗೆ QR ಕೋಡ್‌ನಲ್ಲಿ URL ಅನ್ನು ಏಕೆ ಎಂಬೆಡ್ ಮಾಡಬೇಕು?",
+      "description1": "URL ಅನ್ನು ಎಂಬೆಡ್ ಮಾಡುವುದರಿಂದ ಸುಲಭವಾದ ಸ್ಕ್ಯಾನಿಂಗ್‌ಗಾಗಿ QR ಕೋಡ್ ಸಾಂದ್ರತೆಯನ್ನು ಕಡಿಮೆ ಮಾಡುತ್ತದೆ, ಇದು ಸಮರ್ಥ ಅಡ್ಡ-ಸಾಧನ ಅಥವಾ ರಿಮೋಟ್ ಪರಿಶೀಲನೆಯನ್ನು ಅನುಮತಿಸುತ್ತದೆ."
     },
     "item13": {
-      "title":"ನನ್ನ VC ಅನ್ನು ನಾನು ಆನ್‌ಲೈನ್ ಮತ್ತು ಆಫ್‌ಲೈನ್‌ನಲ್ಲಿ ಹಂಚಿಕೊಳ್ಳಬಹುದೇ?",
-      "description1":"1. ಆನ್‌ಲೈನ್: ಪರಿಶೀಲಕವು PDF ಅಥವಾ ಫೋನ್ ಪರದೆಯಿಂದ ಸ್ಕ್ಯಾನ್ ಮಾಡಬಹುದು ಮತ್ತು ಇಂಜಿ ವಾಲೆಟ್ VC ಅನ್ನು ಅಧಿಕೃತಗೊಳಿಸುತ್ತದೆ ಮತ್ತು ಹಂಚಿಕೊಳ್ಳುತ್ತದೆ. ",
-      "description2":"2. ಆಫ್‌ಲೈನ್: ಸ್ಕ್ಯಾನಿಂಗ್ ಮತ್ತು VC ಮರುಪಡೆಯುವಿಕೆಗಾಗಿ ಮುದ್ರಿತ PDF ಅನ್ನು ಪ್ರಸ್ತುತಪಡಿಸಬಹುದು."
+      "title": "ನನ್ನ VC ಅನ್ನು ನಾನು ಆನ್‌ಲೈನ್ ಮತ್ತು ಆಫ್‌ಲೈನ್‌ನಲ್ಲಿ ಹಂಚಿಕೊಳ್ಳಬಹುದೇ?",
+      "description1": "1. ಆನ್‌ಲೈನ್: ಪರಿಶೀಲಕವು PDF ಅಥವಾ ಫೋನ್ ಪರದೆಯಿಂದ ಸ್ಕ್ಯಾನ್ ಮಾಡಬಹುದು ಮತ್ತು ಇಂಜಿ ವಾಲೆಟ್ VC ಅನ್ನು ಅಧಿಕೃತಗೊಳಿಸುತ್ತದೆ ಮತ್ತು ಹಂಚಿಕೊಳ್ಳುತ್ತದೆ. ",
+      "description2": "2. ಆಫ್‌ಲೈನ್: ಸ್ಕ್ಯಾನಿಂಗ್ ಮತ್ತು VC ಮರುಪಡೆಯುವಿಕೆಗಾಗಿ ಮುದ್ರಿತ PDF ಅನ್ನು ಪ್ರಸ್ತುತಪಡಿಸಬಹುದು."
     },
     "item14": {
-      "title":"ಆನ್‌ಲೈನ್ ಹಂಚಿಕೆಯ ಸಮಯದಲ್ಲಿ ಇಂಜಿ ವಾಲೆಟ್ ಪರಿಶೀಲಕವನ್ನು ಹೇಗೆ ಪರಿಶೀಲಿಸುತ್ತದೆ ಮತ್ತು ದೃಢೀಕರಿಸುತ್ತದೆ?",
-      "description1":"ಪರಿಶೀಲಕ ರುಜುವಾತುಗಳನ್ನು ಆಂತರಿಕ ಪಟ್ಟಿಯಿಂದ ಪರಿಶೀಲಿಸಲಾಗುತ್ತದೆ. ಅಧಿಕೃತವಾಗಿದ್ದರೆ, ವೆಬ್ ಇಂಟರ್‌ಫೇಸ್‌ನೊಂದಿಗೆ ಇಂಜಿ ವಾಲೆಟ್ VP_token ಅನ್ನು ಬಳಸಿಕೊಂಡು VC ಅನ್ನು ಸುರಕ್ಷಿತವಾಗಿ ವೆರಿಫೈಯರ್‌ಗೆ ಕಳುಹಿಸುತ್ತದೆ."
+      "title": "ಆನ್‌ಲೈನ್ ಹಂಚಿಕೆಯ ಸಮಯದಲ್ಲಿ ಇಂಜಿ ವಾಲೆಟ್ ಪರಿಶೀಲಕವನ್ನು ಹೇಗೆ ಪರಿಶೀಲಿಸುತ್ತದೆ ಮತ್ತು ದೃಢೀಕರಿಸುತ್ತದೆ?",
+      "description1": "ಪರಿಶೀಲಕ ರುಜುವಾತುಗಳನ್ನು ಆಂತರಿಕ ಪಟ್ಟಿಯಿಂದ ಪರಿಶೀಲಿಸಲಾಗುತ್ತದೆ. ಅಧಿಕೃತವಾಗಿದ್ದರೆ, ವೆಬ್ ಇಂಟರ್‌ಫೇಸ್‌ನೊಂದಿಗೆ ಇಂಜಿ ವಾಲೆಟ್ VP_token ಅನ್ನು ಬಳಸಿಕೊಂಡು VC ಅನ್ನು ಸುರಕ್ಷಿತವಾಗಿ ವೆರಿಫೈಯರ್‌ಗೆ ಕಳುಹಿಸುತ್ತದೆ."
     },
     "item15": {
-      "title":"OpenID4VP ಎಂದರೇನು ಮತ್ತು ಅದನ್ನು ಇಂಜಿ ವಾಲೆಟ್‌ನಲ್ಲಿ ಹೇಗೆ ಬಳಸಲಾಗುತ್ತದೆ?",
-      "description1":"OpenID4VP (ಪರಿಶೀಲಿಸಬಹುದಾದ ಪ್ರಸ್ತುತಿಗಳಿಗಾಗಿ OpenID) ಪ್ರಮಾಣಿತವು VC ಗಳ ಸುರಕ್ಷಿತ ಹಂಚಿಕೆಯನ್ನು ಅನುಮತಿಸುತ್ತದೆ. Inji Wallet VC ಸಂಗ್ರಹಣೆಗಾಗಿ QR ಕೋಡ್ ಅನ್ನು ಉತ್ಪಾದಿಸುತ್ತದೆ, VC ಗಳನ್ನು ಸುರಕ್ಷಿತವಾಗಿ ವಿನಂತಿಸಲು ಮತ್ತು ಸ್ವೀಕರಿಸಲು Inji Verify ನಂತಹ ಪರಿಶೀಲಕಗಳನ್ನು ಸಕ್ರಿಯಗೊಳಿಸುತ್ತದೆ."
+      "title": "OpenID4VP ಎಂದರೇನು ಮತ್ತು ಅದನ್ನು ಇಂಜಿ ವಾಲೆಟ್‌ನಲ್ಲಿ ಹೇಗೆ ಬಳಸಲಾಗುತ್ತದೆ?",
+      "description1": "OpenID4VP (ಪರಿಶೀಲಿಸಬಹುದಾದ ಪ್ರಸ್ತುತಿಗಳಿಗಾಗಿ OpenID) ಪ್ರಮಾಣಿತವು VC ಗಳ ಸುರಕ್ಷಿತ ಹಂಚಿಕೆಯನ್ನು ಅನುಮತಿಸುತ್ತದೆ. Inji Wallet VC ಸಂಗ್ರಹಣೆಗಾಗಿ QR ಕೋಡ್ ಅನ್ನು ಉತ್ಪಾದಿಸುತ್ತದೆ, VC ಗಳನ್ನು ಸುರಕ್ಷಿತವಾಗಿ ವಿನಂತಿಸಲು ಮತ್ತು ಸ್ವೀಕರಿಸಲು Inji Verify ನಂತಹ ಪರಿಶೀಲಕಗಳನ್ನು ಸಕ್ರಿಯಗೊಳಿಸುತ್ತದೆ."
     },
     "item16": {
-      "title":"ಇಂಜಿ ವಾಲೆಟ್ ಅನ್ನು ಬಳಸಿಕೊಂಡು ನನ್ನ VC ಅನ್ನು ಸುರಕ್ಷಿತವಾಗಿ ಹಂಚಿಕೊಳ್ಳಲಾಗಿದೆ ಎಂದು ನನಗೆ ಹೇಗೆ ಗೊತ್ತು??",
-     "description1":"ಪರಿಶೀಲಕನು QR ಕೋಡ್ ಅನ್ನು ಸ್ಕ್ಯಾನ್ ಮಾಡಿದ ನಂತರ ಮತ್ತು ಇಂಜಿ ವಾಲೆಟ್ ಅದನ್ನು ದೃಢೀಕರಿಸಿದ ನಂತರ, VC ಅನ್ನು ಪರಿಶೀಲಕರಿಗೆ ಸುರಕ್ಷಿತವಾಗಿ ಒದಗಿಸಲಾಗುತ್ತದೆ, ಅವರು ಅದನ್ನು ಮೌಲ್ಯೀಕರಿಸುತ್ತಾರೆ ಮತ್ತು ದೃಢೀಕರಿಸುತ್ತಾರೆ."
+      "title": "ಇಂಜಿ ವಾಲೆಟ್ ಅನ್ನು ಬಳಸಿಕೊಂಡು ನನ್ನ VC ಅನ್ನು ಸುರಕ್ಷಿತವಾಗಿ ಹಂಚಿಕೊಳ್ಳಲಾಗಿದೆ ಎಂದು ನನಗೆ ಹೇಗೆ ಗೊತ್ತು??",
+      "description1": "ಪರಿಶೀಲಕನು QR ಕೋಡ್ ಅನ್ನು ಸ್ಕ್ಯಾನ್ ಮಾಡಿದ ನಂತರ ಮತ್ತು ಇಂಜಿ ವಾಲೆಟ್ ಅದನ್ನು ದೃಢೀಕರಿಸಿದ ನಂತರ, VC ಅನ್ನು ಪರಿಶೀಲಕರಿಗೆ ಸುರಕ್ಷಿತವಾಗಿ ಒದಗಿಸಲಾಗುತ್ತದೆ, ಅವರು ಅದನ್ನು ಮೌಲ್ಯೀಕರಿಸುತ್ತಾರೆ ಮತ್ತು ದೃಢೀಕರಿಸುತ್ತಾರೆ."
     },
     "item17": {
-      "title":"QR ಕೋಡ್ ಅನ್ನು VC ಅನ್ನು ಉತ್ಪಾದಿಸಿದ ಸ್ಥಳಕ್ಕಿಂತ ಬೇರೆ ಸಾಧನದಲ್ಲಿ ಸ್ಕ್ಯಾನ್ ಮಾಡಿದರೆ ಏನಾಗುತ್ತದೆ?",
-      "description1":"ಕ್ರಾಸ್-ಡಿವೈಸ್ ಹಂಚಿಕೆಯನ್ನು ಬೆಂಬಲಿಸುತ್ತದೆ. ಪರಿಶೀಲಕವು VC PDF ನ ಯಾವುದೇ ನಕಲಿನಿಂದ ಸ್ಕ್ಯಾನ್ ಮಾಡಬಹುದು ಮತ್ತು Inji Wallet VC ಅನ್ನು ಸುರಕ್ಷಿತವಾಗಿ ಪರಿಶೀಲಿಸುತ್ತದೆ ಮತ್ತು ಹಂಚಿಕೊಳ್ಳುತ್ತದೆ."
+      "title": "QR ಕೋಡ್ ಅನ್ನು VC ಅನ್ನು ಉತ್ಪಾದಿಸಿದ ಸ್ಥಳಕ್ಕಿಂತ ಬೇರೆ ಸಾಧನದಲ್ಲಿ ಸ್ಕ್ಯಾನ್ ಮಾಡಿದರೆ ಏನಾಗುತ್ತದೆ?",
+      "description1": "ಕ್ರಾಸ್-ಡಿವೈಸ್ ಹಂಚಿಕೆಯನ್ನು ಬೆಂಬಲಿಸುತ್ತದೆ. ಪರಿಶೀಲಕವು VC PDF ನ ಯಾವುದೇ ನಕಲಿನಿಂದ ಸ್ಕ್ಯಾನ್ ಮಾಡಬಹುದು ಮತ್ತು Inji Wallet VC ಅನ್ನು ಸುರಕ್ಷಿತವಾಗಿ ಪರಿಶೀಲಿಸುತ್ತದೆ ಮತ್ತು ಹಂಚಿಕೊಳ್ಳುತ್ತದೆ."
     },
     "item18": {
-      "title":"ಇಂಜಿ ವಾಲೆಟ್ ವಿವಿಧ QR ಕೋಡ್ ಫಾರ್ಮ್ಯಾಟ್‌ಗಳನ್ನು ಬೆಂಬಲಿಸಬಹುದೇ?",
-      "description1":"ಹೌದು. ಕಾನ್ಫಿಗ್-ಆಧಾರಿತ ಪೀಳಿಗೆಯು QR ಕೋಡ್‌ಗಳನ್ನು ಒಳಗೊಂಡಿರಲು ಅನುಮತಿಸುತ್ತದೆ: ",
-      "description2":"1. ಸುಲಭ ಹಂಚಿಕೆಗಾಗಿ VC ಸಂಗ್ರಹಣೆಗೆ URL, ಅಥವಾ ",
-      "description3":"2. JSON ನಲ್ಲಿ ಪೂರ್ಣ VC ಡೇಟಾ (ದಟ್ಟ ಸ್ವರೂಪ)."
+      "title": "ಇಂಜಿ ವಾಲೆಟ್ ವಿವಿಧ QR ಕೋಡ್ ಫಾರ್ಮ್ಯಾಟ್‌ಗಳನ್ನು ಬೆಂಬಲಿಸಬಹುದೇ?",
+      "description1": "ಹೌದು. ಕಾನ್ಫಿಗ್-ಆಧಾರಿತ ಪೀಳಿಗೆಯು QR ಕೋಡ್‌ಗಳನ್ನು ಒಳಗೊಂಡಿರಲು ಅನುಮತಿಸುತ್ತದೆ: ",
+      "description2": "1. ಸುಲಭ ಹಂಚಿಕೆಗಾಗಿ VC ಸಂಗ್ರಹಣೆಗೆ URL, ಅಥವಾ ",
+      "description3": "2. JSON ನಲ್ಲಿ ಪೂರ್ಣ VC ಡೇಟಾ (ದಟ್ಟ ಸ್ವರೂಪ)."
     },
     "item19": {
-      "title":"ಹಂಚಿಕೊಂಡ ನಂತರ ಇಂಜಿ ವಾಲೆಟ್ ರುಜುವಾತು ಪರಿಶೀಲನೆಯನ್ನು ಹೇಗೆ ನಿರ್ವಹಿಸುತ್ತದೆ?",
-      "description1":"ಹಂಚಿಕೆಯ ನಂತರ, ಇಂಜಿ ಪರಿಶೀಲನೆಯು VC ದೃಢೀಕರಣವನ್ನು ಪರಿಶೀಲಿಸುತ್ತದೆ. ಮಾನ್ಯವಾಗಿದ್ದರೆ, ದೃಢೀಕರಣದ ಪರಿಶೀಲನಾ ಸ್ಥಿತಿಯನ್ನು ಪರಿಶೀಲಕರು ಖಚಿತಪಡಿಸುತ್ತಾರೆ."
+      "title": "ಹಂಚಿಕೊಂಡ ನಂತರ ಇಂಜಿ ವಾಲೆಟ್ ರುಜುವಾತು ಪರಿಶೀಲನೆಯನ್ನು ಹೇಗೆ ನಿರ್ವಹಿಸುತ್ತದೆ?",
+      "description1": "ಹಂಚಿಕೆಯ ನಂತರ, ಇಂಜಿ ಪರಿಶೀಲನೆಯು VC ದೃಢೀಕರಣವನ್ನು ಪರಿಶೀಲಿಸುತ್ತದೆ. ಮಾನ್ಯವಾಗಿದ್ದರೆ, ದೃಢೀಕರಣದ ಪರಿಶೀಲನಾ ಸ್ಥಿತಿಯನ್ನು ಪರಿಶೀಲಕರು ಖಚಿತಪಡಿಸುತ್ತಾರೆ."
     },
     "item20": {
-      "title":"ಯಾವ ರೀತಿಯ ರುಜುವಾತು ನೀಡುವವರು ಬೆಂಬಲಿತರಾಗಿದ್ದಾರೆ?",
-      "description1":"OpenID4VCI ಪ್ರೋಟೋಕಾಲ್ ಅನ್ನು ಅನುಸರಿಸುವ ಯಾವುದೇ ವಿತರಕರು ಇಂಜಿ ವಾಲೆಟ್‌ನಲ್ಲಿ ನಂಬಬಹುದು. ಈ ವಿತರಕರು VC ಗಳನ್ನು ನೀಡಲು ಮತ್ತು ಡೌನ್‌ಲೋಡ್ ಮಾಡಲು ಅಗತ್ಯವಿರುವ ಡೇಟಾವನ್ನು ಒದಗಿಸುತ್ತಾರೆ."
+      "title": "ಯಾವ ರೀತಿಯ ರುಜುವಾತು ನೀಡುವವರು ಬೆಂಬಲಿತರಾಗಿದ್ದಾರೆ?",
+      "description1": "OpenID4VCI ಪ್ರೋಟೋಕಾಲ್ ಅನ್ನು ಅನುಸರಿಸುವ ಯಾವುದೇ ವಿತರಕರು ಇಂಜಿ ವಾಲೆಟ್‌ನಲ್ಲಿ ನಂಬಬಹುದು. ಈ ವಿತರಕರು VC ಗಳನ್ನು ನೀಡಲು ಮತ್ತು ಡೌನ್‌ಲೋಡ್ ಮಾಡಲು ಅಗತ್ಯವಿರುವ ಡೇಟಾವನ್ನು ಒದಗಿಸುತ್ತಾರೆ."
     },
     "item21": {
       "title": "ಈ ಬಿಡುಗಡೆಯಲ್ಲಿ ಪರಿಚಯಿಸಲಾದ ವೈಶಿಷ್ಟ್ಯಗಳ ಕುರಿತು ಹೆಚ್ಚಿನ ವಿವರವಾದ ಮಾಹಿತಿಯನ್ನು ನಾನು ಎಲ್ಲಿ ಕಂಡುಹಿಡಿಯಬಹುದು?",
       "description1": "ವಿವರಗಳಿಗಾಗಿ <a href=\"https://docs.mosip.io/inji/inji-web/overview\" target=\"_blank\">Inji Wallet ದಸ್ತಾವೇಜನ್ನು</a> ನೋಡಿ ಹಂತಗಳು, ಸಿಸ್ಟಮ್ ಅವಲೋಕನಗಳು ಮತ್ತು ಹೊಸ ವೈಶಿಷ್ಟ್ಯಗಳ ವಿವರಣೆಗಳು."
     },
     "item22": {
-      "title":"ಇಂಜಿ ವಾಲೆಟ್‌ನಲ್ಲಿ ಆನ್‌ಲೈನ್ ಹಂಚಿಕೆ ವೈಶಿಷ್ಟ್ಯದೊಂದಿಗೆ ನಾನು ಹೇಗೆ ಪ್ರಾರಂಭಿಸುವುದು?",
-      "description1":"Inji Wallet ನ ವೆಬ್ ಇಂಟರ್‌ಫೇಸ್ ಮೂಲಕ VC ಗಳನ್ನು ಪ್ರವೇಶಿಸಿ, ಡೌನ್‌ಲೋಡ್ ಮಾಡಿ ಮತ್ತು ದೃಢೀಕರಣಗಳನ್ನು ವೈಯಕ್ತಿಕವಾಗಿ ಅಥವಾ ಆನ್‌ಲೈನ್‌ನಲ್ಲಿ ಪರಿಶೀಲಕರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳಲು QR ಕೋಡ್ ಅನ್ನು ಬಳಸಿ. ವಿವರಗಳು <a href=\"https://docs.mosip.io/inji ನಲ್ಲಿ /inji-web/functional-overview/end-user-guide\" target=\"_blank\"> ಬಳಕೆದಾರ ಮಾರ್ಗದರ್ಶಿ </a> ."
+      "title": "ಇಂಜಿ ವಾಲೆಟ್‌ನಲ್ಲಿ ಆನ್‌ಲೈನ್ ಹಂಚಿಕೆ ವೈಶಿಷ್ಟ್ಯದೊಂದಿಗೆ ನಾನು ಹೇಗೆ ಪ್ರಾರಂಭಿಸುವುದು?",
+      "description1": "Inji Wallet ನ ವೆಬ್ ಇಂಟರ್‌ಫೇಸ್ ಮೂಲಕ VC ಗಳನ್ನು ಪ್ರವೇಶಿಸಿ, ಡೌನ್‌ಲೋಡ್ ಮಾಡಿ ಮತ್ತು ದೃಢೀಕರಣಗಳನ್ನು ವೈಯಕ್ತಿಕವಾಗಿ ಅಥವಾ ಆನ್‌ಲೈನ್‌ನಲ್ಲಿ ಪರಿಶೀಲಕರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳಲು QR ಕೋಡ್ ಅನ್ನು ಬಳಸಿ. ವಿವರಗಳು <a href=\"https://docs.mosip.io/inji ನಲ್ಲಿ /inji-web/functional-overview/end-user-guide\" target=\"_blank\"> ಬಳಕೆದಾರ ಮಾರ್ಗದರ್ಶಿ </a> ."
     },
     "item23": {
-      "title":"ಇಂಜಿ ವಾಲೆಟ್‌ನಲ್ಲಿ ಎಂಬೆಡೆಡ್ VC ಮತ್ತು ಆನ್‌ಲೈನ್ ಹಂಚಿಕೆಯ ನಡುವೆ ನಾನು ಹೇಗೆ ಟಾಗಲ್ ಮಾಡಬಹುದು?",
-      "description1":"Mimoto ನೀಡುವವರ ಸೆಟ್ಟಿಂಗ್‌ಗಳಲ್ಲಿ qr_code_type ಅನ್ನು ಕಾನ್ಫಿಗರ್ ಮಾಡಿ: ",
-      "description2":"1. EmbeddedVC: ಆಫ್‌ಲೈನ್ ಬಳಕೆಗಾಗಿ JSON ಸ್ವರೂಪದಲ್ಲಿ (ಸಾಂದ್ರವಾದ QR ಕೋಡ್) ಪೂರ್ಣ VC ಅನ್ನು ಎಂಬೆಡ್ ಮಾಡುತ್ತದೆ.",
-      "description3":"2. OnlineSharing: ಆನ್‌ಲೈನ್ VC ಸಂಗ್ರಹಣೆಗೆ URL ನೊಂದಿಗೆ QR ಕೋಡ್ ಅನ್ನು ರಚಿಸುತ್ತದೆ, ಇದು ಆನ್‌ಲೈನ್‌ನಲ್ಲಿ ಸ್ಕ್ಯಾನ್ ಮಾಡಲು ಮತ್ತು ಹಂಚಿಕೊಳ್ಳಲು ಸುಲಭವಾಗುತ್ತದೆ."
+      "title": "ಇಂಜಿ ವಾಲೆಟ್‌ನಲ್ಲಿ ಎಂಬೆಡೆಡ್ VC ಮತ್ತು ಆನ್‌ಲೈನ್ ಹಂಚಿಕೆಯ ನಡುವೆ ನಾನು ಹೇಗೆ ಟಾಗಲ್ ಮಾಡಬಹುದು?",
+      "description1": "Mimoto ನೀಡುವವರ ಸೆಟ್ಟಿಂಗ್‌ಗಳಲ್ಲಿ qr_code_type ಅನ್ನು ಕಾನ್ಫಿಗರ್ ಮಾಡಿ: ",
+      "description2": "1. EmbeddedVC: ಆಫ್‌ಲೈನ್ ಬಳಕೆಗಾಗಿ JSON ಸ್ವರೂಪದಲ್ಲಿ (ಸಾಂದ್ರವಾದ QR ಕೋಡ್) ಪೂರ್ಣ VC ಅನ್ನು ಎಂಬೆಡ್ ಮಾಡುತ್ತದೆ.",
+      "description3": "2. OnlineSharing: ಆನ್‌ಲೈನ್ VC ಸಂಗ್ರಹಣೆಗೆ URL ನೊಂದಿಗೆ QR ಕೋಡ್ ಅನ್ನು ರಚಿಸುತ್ತದೆ, ಇದು ಆನ್‌ಲೈನ್‌ನಲ್ಲಿ ಸ್ಕ್ಯಾನ್ ಮಾಡಲು ಮತ್ತು ಹಂಚಿಕೊಳ್ಳಲು ಸುಲಭವಾಗುತ್ತದೆ."
     }
   },
   "DataShareExpiryModal": {
@@ -388,7 +387,7 @@
     "success": "ಮುಂದುವರೆಯಿರಿ",
     "cancel": "ಹಿಂದೆ",
     "disclaimer": "QR ಕೋಡ್ ಅನ್ನು ನೀವು ಇಲ್ಲಿ ಎಷ್ಟು ಬಾರಿ ಆಯ್ಕೆ ಮಾಡಿದ್ದೀರೋ ಅಷ್ಟು ಬಾರಿ ಮಾತ್ರ ಹಂಚಿಕೊಳ್ಳಬಹುದು ಎಂಬುದನ್ನು ದಯವಿಟ್ಟು ಗಮನಿಸಿ. ",
-    "toastText":"ಶೀಘ್ರದಲ್ಲೇ ಬರಲಿದೆ"
+    "toastText": "ಶೀಘ್ರದಲ್ಲೇ ಬರಲಿದೆ"
   },
   "CustomExpiryModal": {
     "title": "ಈ ರುಜುವಾತುಗಳನ್ನು ನೀವು ಎಷ್ಟು ಬಾರಿ ಬಳಸಲು ಬಯಸುತ್ತೀರಿ ಎಂಬುದನ್ನು ದಯವಿಟ್ಟು ನಮೂದಿಸಿ ",
@@ -479,6 +478,39 @@
         "title": "ಇಂಟರ್ನೆಟ್ ಸಂಪರ್ಕವಿಲ್ಲ",
         "message": "ದಯವಿಟ್ಟು ನಿಮ್ಮ ಇಂಟರ್ನೆಟ್ ಸಂಪರ್ಕವನ್ನು ಪರಿಶೀಲಿಸಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ."
       }
+    }
+  },
+  "VerifierTrustPage": {
+    "modal": {
+      "title": "ಅಪರಿಚಿತ ವಿತರಕ",
+      "description": "ನೀವು ಈ ವಿತರಣೆದಾರರನ್ನು ಗುರುತಿಸುತ್ತೀರಿ ಅಥವಾ ನಂಬುತ್ತೀರಿ ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ. \nಒಮ್ಮೆ ನೀವು ಈ ವಿತರಣೆದಾರರನ್ನು ನಂಬಿದರೆ:",
+      "benefitSaveSecurely": "ಕಾರ್ಡ್ ನಿಮ್ಮ ವಾಲೆಟ್‌ನಲ್ಲಿ ಸುರಕ್ಷಿತವಾಗಿ ಉಳಿಸಲಾಗುತ್ತದೆ.",
+      "benefitAddToTrustedList": "ಈ ವಿತರಣೆದಾರರನ್ನು ನಿಮ್ಮ ವಿಶ್ವಾಸಾರ್ಹ ಪಟ್ಟಿಗೆ ಸೇರಿಸಲಾಗುತ್ತದೆ.",
+      "benefitSkipReviewFuture": "ಮುಂದಿನ ಬಾರಿ ಅವರಿಂದ ಡೌನ್‌ಲೋಡ್ ಮಾಡುವಾಗ ನೀವು ಮತ್ತೆ ವಿಶ್ವಾಸಾರ್ಹತೆಯನ್ನು ಪರಿಶೀಲಿಸುವ ಅಗತ್ಯವಿಲ್ಲ.",
+      "trustButton": "ಹೌದು, ನಾನು ಈ ವಿತರಣೆದಾರರನ್ನು ನಂಬುತ್ತೇನೆ",
+      "notTrustButton": "ಇಲ್ಲ, ನಾನು ಈ ವಿತರಣೆದಾರರನ್ನು ನಂಬುವುದಿಲ್ಲ",
+      "infoTooltipButton": "ನಂಬಿಕೆ ಇಡುವುದು ಅಂದರೆ ಏನು?",
+      "infoTooltipText": "ವಿತರಣೆದಾರರನ್ನು ನಂಬುವುದು ನಿಮ್ಮ ರುಜುವಾತುಗಳನ್ನು ಕೋರಲು ಅವರಿಗೆ ಅನುಮತಿಸುತ್ತದೆ. ಮುಂದಿನ ಹಂತದಲ್ಲಿ ಹಂಚಿಕೊಳ್ಳಲು ನೀವು ಯಾವ ರುಜುವಾತುಗಳನ್ನು ಆರಿಸುತ್ತೀರಿ."
+    },
+    "TrustRejectionModal": {
+      "title": "ನೀವು ಖಚಿತವಾಗಿ ರದ್ದುಮಾಡಲು ಬಯಸುತ್ತೀರಾ?",
+      "description": "ನೀವು ಇದನ್ನು ರದ್ದುಮಾಡಿದರೆ, ನಿಮ್ಮ ವಿನಂತಿಯನ್ನು ಪ್ರಕ್ರಿಯೆಗೊಳಿಸಲಾಗುವುದಿಲ್ಲ ಮತ್ತು ಅದು ಕಳೆದುಹೋಗಬಹುದು.",
+      "confirmButton": "ಹೌದು, ರದ್ದುಮಾಡು",
+      "goBackButton": "ಹಿಂದೆ ಹೋಗಿ"
+    },
+    "UserAuthorizationPage": {
+      "validateVerifierError": "ವಿತರಣೆದಾರರ ವಿನಂತಿಯನ್ನು ಮೌಲ್ಯೀಕರಿಸಲು ವಿಫಲವಾಗಿದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
+      "invalidVerifierResponse": "ಅಮಾನ್ಯ ವಿತರಣೆದಾರರ ಪ್ರತಿಕ್ರಿಯೆ ಸ್ವೀಕರಿಸಲಾಗಿದೆ.",
+      "addTrustedVerifierError": "ವಿತರಣೆದಾರರನ್ನು ವಿಶ್ವಾಸಾರ್ಹ ಪಟ್ಟಿಗೆ ಸೇರಿಸಲು ವಿಫಲವಾಗಿದೆ."
+    },
+    "ErrorCard": {
+      "defaultTitle": "ದೋಷ",
+      "defaultDescription": "ಏನೋ ತಪ್ಪಾಗಿದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
+      "closeButton": "ಮುಚ್ಚಿ"
+    },
+    "loadingCard": {
+      "title": "ವಿತರಣೆದಾರರ ಮಾಹಿತಿಯನ್ನು ಪಡೆಯಲಾಗುತ್ತಿದೆ...",
+      "subtitle": "ದಯವಿಟ್ಟು ನಾವು ವಿನಂತಿಯನ್ನು ಪರಿಶೀಲಿಸಿ ಮತ್ತು ನಿಮ್ಮ ರುಜುವಾತುಗಳನ್ನು ಸಿದ್ಧಪಡಿಸುವವರೆಗೆ ಕಾಯಿರಿ."
     }
   }
 }
