--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -479,5 +479,38 @@
         "message": "يرجى التحقق من اتصالك بالإنترنت والمحاولة مرة أخرى."
       }
     }
+  },
+  "VerifierTrustPage": {
+    "modal": {
+      "title": "مدقق غير معروف",
+      "description": "تأكد من أنك تتعرف على هذا المدقق أو تثق به. \nبمجرد أن تثق بهذا المدقق:",
+      "benefitSaveSecurely": "سيتم حفظ البطاقة بأمان في محفظتك.",
+      "benefitAddToTrustedList": "ستتم إضافة هذا المدقق إلى قائمة الثقة الخاصة بك.",
+      "benefitSkipReviewFuture": "لن تحتاج إلى مراجعة الثقة مرة أخرى عند التنزيل منهم في المرة القادمة.",
+      "trustButton": "نعم، أنا أثق بهذا المدقق",
+      "notTrustButton": "لا، أنا لا أثق بهذا المدقق",
+      "infoTooltipButton": "ماذا تعني الثقة؟",
+      "infoTooltipText": "إن الثقة في المدقق تسمح له بطلب بيانات الاعتماد الخاصة بك. ستظل تختار بيانات الاعتماد التي تريد مشاركتها في الخطوة التالية."
+    },
+    "TrustRejectionModal": {
+      "title": "هل أنت متأكد أنك تريد الإلغاء؟",
+      "description": "إذا قمت بالإلغاء، فلن تتم معالجة طلبك وقد يُفقد.",
+      "confirmButton": "نعم، إلغاء",
+      "goBackButton": "العودة"
+    },
+    "UserAuthorizationPage": {
+      "validateVerifierError": "فشل في التحقق من صحة طلب المدقق. يرجى المحاولة مرة أخرى.",
+      "invalidVerifierResponse": "تم تلقي استجابة مدقق غير صالحة.",
+      "addTrustedVerifierError": "فشل في إضافة المدقق إلى قائمة الثقة."
+    },
+    "ErrorCard": {
+      "defaultTitle": "خطأ",
+      "defaultDescription": "حدث خطأ ما. يرجى المحاولة مرة أخرى.",
+      "closeButton": "إغلاق"
+    },
+    "loadingCard": {
+      "title": "جلب معلومات المدقق...",
+      "subtitle": "يرجى الانتظار بينما نتحقق من صحة الطلب ونجهز بيانات الاعتماد الخاصة بك."
+    }
   }
 }
