--- a/inji-web/src/locales/pt.json
+++ b/inji-web/src/locales/pt.json
@@ -12,60 +12,60 @@
     }
   },
   "HomePage": {
-    "Banner":{
-      "heading":"Acesse e gerencie suas credenciais digitais sem esforço",
-      "description":"Torne seus dados portáteis com confiança. Gerencie seus documentos digitais com segurança com nossa carteira baseada na web fácil de usar.",
-      "buttontext":"Comece"
+    "Banner": {
+      "heading": "Acesse e gerencie suas credenciais digitais sem esforço",
+      "description": "Torne seus dados portáteis com confiança. Gerencie seus documentos digitais com segurança com nossa carteira baseada na web fácil de usar.",
+      "buttontext": "Comece"
     },
-    "Features":{
-      "heading":"Recursos da Inji Wallet",
-      "description1":"Gerenciamento seguro e sem complicações de credenciais verificáveis",
-      "description2":"para interações digitais confiáveis."
+    "Features": {
+      "heading": "Recursos da Inji Wallet",
+      "description1": "Gerenciamento seguro e sem complicações de credenciais verificáveis",
+      "description2": "para interações digitais confiáveis."
     },
-    "FeatureItem1":{
-      "heading":"Acesse suas credenciais em qualquer lugar que precisar",
-      "item1":"Credenciais simplificadas",
-      "description1":"Mantenha todos os seus documentos essenciais",
-      "item2":"Chega de papelada. Tudo em um só lugar",
-      "description2":"Baixe, armazene e recupere seus documentos com facilidade e sem esforço. Ganhe, ganhe, ganhe."
+    "FeatureItem1": {
+      "heading": "Acesse suas credenciais em qualquer lugar que precisar",
+      "item1": "Credenciais simplificadas",
+      "description1": "Mantenha todos os seus documentos essenciais",
+      "item2": "Chega de papelada. Tudo em um só lugar",
+      "description2": "Baixe, armazene e recupere seus documentos com facilidade e sem esforço. Ganhe, ganhe, ganhe."
     },
-    "FeatureItem2":{
-      "heading":"Seus documentos baixados em segundos",
-      "item1":"Baixe com confiança",
-      "description1":"Salve seus documentos importantes instantaneamente",
-      "item2":"Seguro e protegido",
-      "description2":"Baixe IDs, licenças e muito mais em um local seguro."
+    "FeatureItem2": {
+      "heading": "Seus documentos baixados em segundos",
+      "item1": "Baixe com confiança",
+      "description1": "Salve seus documentos importantes instantaneamente",
+      "item2": "Seguro e protegido",
+      "description2": "Baixe IDs, licenças e muito mais em um local seguro."
     },
-    "FeatureItem3":{
-      "heading":"Compartilhamento fácil",
-      "item1":"Compartilhe com um código QR",
-      "description1":"Compartilhe facilmente suas identidades e certificados em qualquer lugar. Basta apresentar o código QR do seu documento para ser escaneado e compartilhado.",
-      "item2":"Ler, definir, compartilhar",
-      "description2":"Código QR verificado em tempo real."
+    "FeatureItem3": {
+      "heading": "Compartilhamento fácil",
+      "item1": "Compartilhe com um código QR",
+      "description1": "Compartilhe facilmente suas identidades e certificados em qualquer lugar. Basta apresentar o código QR do seu documento para ser escaneado e compartilhado.",
+      "item2": "Ler, definir, compartilhar",
+      "description2": "Código QR verificado em tempo real."
     },
-    "FeatureItem4":{
-      "heading":"Seguro e privado",
-      "item1":"Suas credenciais protegidas",
-      "description1":"Seus dados permanecem privados com o mecanismo de segurança integrado.",
-      "item2":"Fique tranquilo",
-      "description2":"Mantenha suas credenciais seguras para que você possa se concentrar no que importa."
+    "FeatureItem4": {
+      "heading": "Seguro e privado",
+      "item1": "Suas credenciais protegidas",
+      "description1": "Seus dados permanecem privados com o mecanismo de segurança integrado.",
+      "item2": "Fique tranquilo",
+      "description2": "Mantenha suas credenciais seguras para que você possa se concentrar no que importa."
     },
-    "FeatureItem5":{
-      "heading":"Acesso e compatibilidade mais amplos",
-      "item1":"Disponível no seu navegador favorito",
-      "description1":"A Inji Wallet funciona com Chrome, Safari, Firefox e Edge.",
-      "item2":"Sempre ao alcance",
-      "description2":"A conveniência encontra a acessibilidade onde quer que você esteja, garantindo que seus documentos estejam sempre ao alcance."
+    "FeatureItem5": {
+      "heading": "Acesso e compatibilidade mais amplos",
+      "item1": "Disponível no seu navegador favorito",
+      "description1": "A Inji Wallet funciona com Chrome, Safari, Firefox e Edge.",
+      "item2": "Sempre ao alcance",
+      "description2": "A conveniência encontra a acessibilidade onde quer que você esteja, garantindo que seus documentos estejam sempre ao alcance."
     },
-    "QuickTip":{
-      "heading":"Dicas rápidas para baixar suas credenciais instantaneamente",
-      "toastText":"Em breve",
-      "buttontext":"Clique aqui"
+    "QuickTip": {
+      "heading": "Dicas rápidas para baixar suas credenciais instantaneamente",
+      "toastText": "Em breve",
+      "buttontext": "Clique aqui"
     },
     "Login": {
       "loginTitle": "Entrar",
-      "loginDescription":"Faça login com sua conta ou continue como convidado para acessar suas credenciais.",
-      "loginNote":"Alguns recursos podem ser limitados no modo convidado.",
+      "loginDescription": "Faça login com sua conta ou continue como convidado para acessar suas credenciais.",
+      "loginNote": "Alguns recursos podem ser limitados no modo convidado.",
       "loggingIn": "Entrando",
       "loginGoogle": "Continuar com o Google",
       "loginGuest": "Continuar como convidado"
@@ -196,8 +196,8 @@
       },
       "verification": {
         "errMissingIssuanceDate": {
-            "title": "Data de Emissão Inválida",
-            "subTitle": "A data de emissão é inválida ou está definida no futuro. Verifique se a data é válida."
+          "title": "Data de Emissão Inválida",
+          "subTitle": "A data de emissão é inválida ou está definida no futuro. Verifique se a data é válida."
         },
         "errInvalidIssuanceDate": {
           "title": "Data de Emissão Inválida",
@@ -292,81 +292,81 @@
       "description3": "2. Nenhum emissor foi configurado.",
       "description4": "Em ambos os casos, entre em contato com sua equipe técnica para resolver o problema."
     },
-    "item8":{
+    "item8": {
       "title": "O que acontece quando eu gero uma Credencial Verificável (VC) na Interface Web da Inji Wallet?",
-      "description1":"1. Você seleciona um emissor e o tipo de credencial.",
-      "description2":"2. Redireciona para a página de login do emissor para autenticação.",
-      "description3":"3. Após o login, o emissor fornece a VC, armazenada com segurança como JSON usando Durian. ",
-      "description4":"4. Um PDF com detalhes da VC e um código QR é gerado.",
-      "description5":"5. O código QR vincula-se à URL de armazenamento da VC para fácil compartilhamento."
+      "description1": "1. Você seleciona um emissor e o tipo de credencial.",
+      "description2": "2. Redireciona para a página de login do emissor para autenticação.",
+      "description3": "3. Após o login, o emissor fornece a VC, armazenada com segurança como JSON usando Durian. ",
+      "description4": "4. Um PDF com detalhes da VC e um código QR é gerado.",
+      "description5": "5. O código QR vincula-se à URL de armazenamento da VC para fácil compartilhamento."
     },
-    "item9":{
-      "title":"Qual é a função do código QR no PDF da credencial?",
-      "description1":"O código QR no PDF vincula-se à URL de armazenamento seguro da VC, facilitando a digitalização e a recuperação de credenciais sem dados densos."
+    "item9": {
+      "title": "Qual é a função do código QR no PDF da credencial?",
+      "description1": "O código QR no PDF vincula-se à URL de armazenamento seguro da VC, facilitando a digitalização e a recuperação de credenciais sem dados densos."
     },
-    "item10":{
-      "title":"Como a interface da Web da Inji Wallet garante que meu VC seja armazenado com segurança?",
-      "description1":"Integra-se com o serviço Data Share (Durian) da plataforma MOSIP ID, armazenando o VC como um objeto JSON com acesso protegido apenas para verificadores autorizados."
+    "item10": {
+      "title": "Como a interface da Web da Inji Wallet garante que meu VC seja armazenado com segurança?",
+      "description1": "Integra-se com o serviço Data Share (Durian) da plataforma MOSIP ID, armazenando o VC como um objeto JSON com acesso protegido apenas para verificadores autorizados."
     },
-    "item11":{
-      "title":"Como o recurso de compartilhamento online funciona com o Inji Verify?",
-      "description1":"1. O PDF do VC contém um código QR.",
-      "description2":"2. O PDF pode ser impresso ou salvo em um telefone.",
-      "description3":"3. O verificador (por exemplo, Inji Verify) escaneia o código QR.",
-      "description4":"4. A Inji Wallet autoriza e compartilha o VC com o verificador."
+    "item11": {
+      "title": "Como o recurso de compartilhamento online funciona com o Inji Verify?",
+      "description1": "1. O PDF do VC contém um código QR.",
+      "description2": "2. O PDF pode ser impresso ou salvo em um telefone.",
+      "description3": "3. O verificador (por exemplo, Inji Verify) escaneia o código QR.",
+      "description4": "4. A Inji Wallet autoriza e compartilha o VC com o verificador."
     },
-    "item12":{
-      "title":"Por que incorporar uma URL no código QR em vez de dados completos do VC?",
-      "description1":"A incorporação de uma URL reduz a densidade do código QR para facilitar a digitalização, permitindo uma verificação eficiente entre dispositivos ou remota."
+    "item12": {
+      "title": "Por que incorporar uma URL no código QR em vez de dados completos do VC?",
+      "description1": "A incorporação de uma URL reduz a densidade do código QR para facilitar a digitalização, permitindo uma verificação eficiente entre dispositivos ou remota."
     },
-    "item13":{
-      "title":"Posso compartilhar meu VC on-line e off-line?",
-      "description1":"1. On-line: o verificador pode escanear de um PDF ou tela do telefone, e a Inji Wallet autoriza e compartilha o VC.",
-      "description2":"2. Off-line: o PDF impresso pode ser apresentado para escaneamento e recuperação do VC."
+    "item13": {
+      "title": "Posso compartilhar meu VC on-line e off-line?",
+      "description1": "1. On-line: o verificador pode escanear de um PDF ou tela do telefone, e a Inji Wallet autoriza e compartilha o VC.",
+      "description2": "2. Off-line: o PDF impresso pode ser apresentado para escaneamento e recuperação do VC."
     },
-    "item14":{
-      "title":"Como a Inji Wallet verifica e autoriza o verificador durante o compartilhamento on-line?",
-      "description1":"As credenciais do verificador são verificadas em uma lista interna. Se autorizadas, a Inji Wallet com interface da web envia o VC de volta ao verificador com segurança usando um vp_token."
+    "item14": {
+      "title": "Como a Inji Wallet verifica e autoriza o verificador durante o compartilhamento on-line?",
+      "description1": "As credenciais do verificador são verificadas em uma lista interna. Se autorizadas, a Inji Wallet com interface da web envia o VC de volta ao verificador com segurança usando um vp_token."
     },
-    "item15":{
-      "title":"O que é OpenID4VP e como ele é usado na Inji Wallet?",
-      "description1":"O padrão OpenID4VP (OpenID para apresentações verificáveis) permite o compartilhamento seguro de VCs. A Inji Wallet gera um código QR para armazenamento de VC, permitindo que verificadores como a Inji Verify solicitem e recebam VCs com segurança."
+    "item15": {
+      "title": "O que é OpenID4VP e como ele é usado na Inji Wallet?",
+      "description1": "O padrão OpenID4VP (OpenID para apresentações verificáveis) permite o compartilhamento seguro de VCs. A Inji Wallet gera um código QR para armazenamento de VC, permitindo que verificadores como a Inji Verify solicitem e recebam VCs com segurança."
     },
-    "item16":{
-      "title":"Como sei que meu VC foi compartilhado com segurança usando a Inji Wallet??",
-      "description1":"Depois que o verificador escaneia o código QR e a Inji Wallet o autoriza, o VC é fornecido com segurança ao verificador, que então o valida e confirma."
+    "item16": {
+      "title": "Como sei que meu VC foi compartilhado com segurança usando a Inji Wallet??",
+      "description1": "Depois que o verificador escaneia o código QR e a Inji Wallet o autoriza, o VC é fornecido com segurança ao verificador, que então o valida e confirma."
     },
-    "item17":{
-      "title":"O que acontece se o código QR for escaneado em um dispositivo diferente daquele onde o VC foi gerado?",
-      "description1":"Suporta compartilhamento entre dispositivos. O verificador pode escanear qualquer cópia do PDF do VC, e a Inji Wallet verifica e compartilha o VC com segurança."
+    "item17": {
+      "title": "O que acontece se o código QR for escaneado em um dispositivo diferente daquele onde o VC foi gerado?",
+      "description1": "Suporta compartilhamento entre dispositivos. O verificador pode escanear qualquer cópia do PDF do VC, e a Inji Wallet verifica e compartilha o VC com segurança."
     },
-    "item18":{
-      "title":"A Inji Wallet suporta diferentes formatos de código QR?",
-      "description1":"Sim. A geração baseada em configuração permite que os códigos QR contenham: ",
-      "description2":"1. URL para armazenamento de VC para fácil compartilhamento, ou ",
-      "description3":"2. Dados completos de VC em JSON (formato mais denso)."
+    "item18": {
+      "title": "A Inji Wallet suporta diferentes formatos de código QR?",
+      "description1": "Sim. A geração baseada em configuração permite que os códigos QR contenham: ",
+      "description2": "1. URL para armazenamento de VC para fácil compartilhamento, ou ",
+      "description3": "2. Dados completos de VC em JSON (formato mais denso)."
     },
-    "item19":{
-      "title":"Como a Inji Wallet lida com a verificação de credenciais após o compartilhamento?",
-      "description1":"Após o compartilhamento, a Inji Verify verifica a autenticidade do VC. Se válido, o verificador confirma o status de verificação da credencial."
+    "item19": {
+      "title": "Como a Inji Wallet lida com a verificação de credenciais após o compartilhamento?",
+      "description1": "Após o compartilhamento, a Inji Verify verifica a autenticidade do VC. Se válido, o verificador confirma o status de verificação da credencial."
     },
-    "item20":{
-      "title":"Que tipo de emissores de credenciais são suportados?",
-      "description1":"Qualquer emissor que siga o protocolo OpenID4VCI pode ser confiável na Inji Wallet. Esses emissores fornecem os dados necessários para emitir e baixar VCs."
+    "item20": {
+      "title": "Que tipo de emissores de credenciais são suportados?",
+      "description1": "Qualquer emissor que siga o protocolo OpenID4VCI pode ser confiável na Inji Wallet. Esses emissores fornecem os dados necessários para emitir e baixar VCs."
     },
     "item21": {
       "title": "Onde posso encontrar informações mais detalhadas sobre os recursos introduzidos nesta versão?",
       "description1": "Consulte a <a href=\"https://docs.mosip.io/inji/inji-web/overview\" target=\"_blank\">documentação da Inji Wallet</a> para obter etapas detalhadas, visões gerais do sistema e descrições de novos recursos."
     },
-    "item22":{
-      "title":"Como começo a usar o recurso de compartilhamento online na Inji Wallet?",
-      "description1":"Acesse VCs pela interface da Web da Inji Wallet, baixe e use o código QR para compartilhar credenciais pessoalmente ou online com verificadores. Detalhes no <a href=\"https://docs.mosip.io/inji/inji-web/functional-overview/end-user-guide\" target=\"_blank\">guia do usuário</a>."
+    "item22": {
+      "title": "Como começo a usar o recurso de compartilhamento online na Inji Wallet?",
+      "description1": "Acesse VCs pela interface da Web da Inji Wallet, baixe e use o código QR para compartilhar credenciais pessoalmente ou online com verificadores. Detalhes no <a href=\"https://docs.mosip.io/inji/inji-web/functional-overview/end-user-guide\" target=\"_blank\">guia do usuário</a>."
     },
-    "item23":{
-      "title":"Como posso alternar entre VC incorporado e compartilhamento online na Inji Wallet?",
-      "description1":"Configurar qr_code_type nas configurações do emissor Mimoto: ",
-      "description2":"1. EmbeddedVC: incorpora o VC completo no formato JSON (código QR mais denso) para uso offline.",
-      "description3":"2. OnlineSharing: gera um código QR com uma URL para o armazenamento de VC online, facilitando a digitalização e o compartilhamento online."
+    "item23": {
+      "title": "Como posso alternar entre VC incorporado e compartilhamento online na Inji Wallet?",
+      "description1": "Configurar qr_code_type nas configurações do emissor Mimoto: ",
+      "description2": "1. EmbeddedVC: incorpora o VC completo no formato JSON (código QR mais denso) para uso offline.",
+      "description3": "2. OnlineSharing: gera um código QR com uma URL para o armazenamento de VC online, facilitando a digitalização e o compartilhamento online."
     }
   },
   "DataShareExpiryModal": {
@@ -374,7 +374,7 @@
     "subTitle": "Por favor, dê seu consentimento para definir uma validade para compartilhar o {{credentialName}}",
     "content": {
       "selectedDocument": "Documento selecionado",
-      "consent" : "Consentimento Validade *",
+      "consent": "Consentimento Validade *",
       "validityTimesHeader": "Número de vezes",
       "validityTimesOptions": {
         "once": "Uma vez",
@@ -479,6 +479,38 @@
         "message": "Por favor, verifique sua conexão com a internet e tente novamente."
       }
     }
+  },
+  "VerifierTrustPage": {
+    "modal": {
+      "title": "Verificador desconhecido",
+      "description": "Certifique-se de reconhecer ou confiar neste verificador. \nAssim que você confiar neste Verificador:",
+      "benefitSaveSecurely": "O cartão será guardado de forma segura na sua carteira.",
+      "benefitAddToTrustedList": "Este verificador será adicionado à sua lista de confiança.",
+      "benefitSkipReviewFuture": "Não precisará de rever a confiança ao fazer download a partir dele da próxima vez.",
+      "trustButton": "Sim, eu confio neste Verificador",
+      "notTrustButton": "Não, eu não confio neste Verificador",
+      "infoTooltipButton": "O que significa confiar?",
+      "infoTooltipText": "Confiar num verificador permite que ele solicite as suas credenciais. Ainda escolherá quais as credenciais a partilhar na próxima etapa."
+    },
+    "TrustRejectionModal": {
+      "title": "Tem a certeza de que pretende cancelar?",
+      "description": "Se cancelar, o seu pedido não será processado e poderá ser perdido.",
+      "confirmButton": "Sim, Cancelar",
+      "goBackButton": "Voltar"
+    },
+    "UserAuthorizationPage": {
+      "validateVerifierError": "Falha ao validar o pedido do verificador. Por favor, tente novamente.",
+      "invalidVerifierResponse": "Resposta de verificador inválida recebida.",
+      "addTrustedVerifierError": "Falha ao adicionar verificador à lista de confiança."
+    },
+    "ErrorCard": {
+      "defaultTitle": "Erro",
+      "defaultDescription": "Algo correu mal. Por favor, tente novamente.",
+      "closeButton": "Fechar"
+    },
+    "loadingCard": {
+      "title": "A buscar informações do verificador...",
+      "subtitle": "Por favor, aguarde enquanto verificamos o pedido e preparamos as suas credenciais."
+    }
   }
 }
-  
