[INJIWEB-1715] - Implement credential request and sharing flow
- Add CredentialRequestModal for verifier credential requests
- Add NoMatchingCredentialsModal for empty wallet scenarios
- Add ErrorCard and LoadingModal for better UX
- Add CredentialItem component with selection functionality
- Add comprehensive error handling utilities
- Add API integration for credential presentation
- Add responsive design with mobile/desktop layouts
- Add i18n support for all modal text
- Add accessibility features and test IDs

Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -503,6 +503,32 @@
       "invalidVerifierResponse": "ಅಮಾನ್ಯ ವಿತರಣೆದಾರರ ಪ್ರತಿಕ್ರಿಯೆ ಸ್ವೀಕರಿಸಲಾಗಿದೆ.",
       "addTrustedVerifierError": "ವಿತರಣೆದಾರರನ್ನು ವಿಶ್ವಾಸಾರ್ಹ ಪಟ್ಟಿಗೆ ಸೇರಿಸಲು ವಿಫಲವಾಗಿದೆ."
     },
+    "CredentialRequestModal": {
+      "loading": {
+        "title": "ರುಜುವಾತುಗಳನ್ನು ಲೋಡ್ ಮಾಡಲಾಗುತ್ತಿದೆ",
+        "message": "ನಿಮ್ಮ ಲಭ್ಯವಿರುವ ರುಜುವಾತುಗಳನ್ನು ನಾವು ಪಡೆಯುವವರೆಗೆ ದಯವಿಟ್ಟು ಕಾಯಿರಿ..."
+      },
+      "header": {
+        "title": "{{verifierName}} ಈ ರುಜುವಾತುಗಳನ್ನು ಕೇಳುತ್ತಿದೆ",
+        "description": "ನೀವು ಹಂಚಿಕೊಳ್ಳಲು ಬಯಸುವ ರುಜುವಾತುಗಳನ್ನು ಆಯ್ಕೆಮಾಡಿ"
+      },
+      "error": {
+        "title": "ರುಜುವಾತುಗಳನ್ನು ಲೋಡ್ ಮಾಡುವಲ್ಲಿ ದೋಷ",
+        "walletIdMessage": "ನೀವು ಲಾಗ್ ಇನ್ ಆಗಿದ್ದೀರಿ ಮತ್ತು ನಿಮ್ಮ ವ್ಯಾಲೆಟ್ ಅನ್ಲಾಕ್ ಆಗಿದೆ ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ."
+      },
+      "noCredentials": {
+        "message": "ಯಾವುದೇ ರುಜುವಾತುಗಳು ಲಭ್ಯವಿಲ್ಲ"
+      },
+      "buttons": {
+        "cancel": "ರದ್ದುಗೊಳಿಸಿ",
+        "consentShare": "ನಾನು ಒಪ್ಪುತ್ತೇನೆ ಮತ್ತು ಹಂಚಿಕೊಳ್ಳುತ್ತೇನೆ"
+      }
+    },
+    "NoMatchingCredentialsModal": {
+      "title": "ಹೊಂದಾಣಿಕೆಯ ರುಜುವಾತುಗಳು ಕಂಡುಬಂದಿಲ್ಲ",
+      "description": "ದಯವಿಟ್ಟು ಸಂಬಂಧಿತ ರುಜುವಾತುಗಳನ್ನು ಡೌನ್ಲೋಡ್ ಮಾಡಿ ಮತ್ತು ಹಂಚಿಕೆ ಪ್ರಕ್ರಿಯೆಯನ್ನು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ",
+      "goToHomeButton": "ಮನೆಗೆ ಹೋಗಿ"
+    },
     "ErrorCard": {
       "defaultTitle": "ದೋಷ",
       "defaultDescription": "ಏನೋ ತಪ್ಪಾಗಿದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
