--- a/inji-web/src/locales/pt.json
+++ b/inji-web/src/locales/pt.json
@@ -503,6 +503,32 @@
       "invalidVerifierResponse": "Resposta de verificador inválida recebida.",
       "addTrustedVerifierError": "Falha ao adicionar verificador à lista de confiança."
     },
+    "CredentialRequestModal": {
+      "loading": {
+        "title": "A carregar credenciais",
+        "message": "Por favor, aguarde enquanto buscamos as suas credenciais disponíveis..."
+      },
+      "header": {
+        "title": "{{verifierName}} está a solicitar estas credenciais",
+        "description": "Selecione quais credenciais deseja partilhar"
+      },
+      "error": {
+        "title": "Erro ao carregar credenciais",
+        "walletIdMessage": "Por favor, certifique-se de que está ligado e que a sua carteira está desbloqueada."
+      },
+      "noCredentials": {
+        "message": "Nenhuma credencial disponível"
+      },
+      "buttons": {
+        "cancel": "Cancelar",
+        "consentShare": "Eu consinto e partilho"
+      }
+    },
+    "NoMatchingCredentialsModal": {
+      "title": "Nenhuma credencial correspondente encontrada",
+      "description": "Por favor, descarregue as credenciais correspondentes e tente novamente o processo de partilha",
+      "goToHomeButton": "Ir para o início"
+    },
     "ErrorCard": {
       "defaultTitle": "Erro",
       "defaultDescription": "Algo correu mal. Por favor, tente novamente.",
