--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -503,6 +503,32 @@
       "invalidVerifierResponse": "தவறான வழங்கி பதில் பெறப்பட்டது.",
       "addTrustedVerifierError": "நம்பகமான பட்டியலில் வழங்கியைச் சேர்க்க முடியவில்லை."
     },
+    "CredentialRequestModal": {
+      "loading": {
+        "title": "சான்றுகளை ஏற்றுகிறது",
+        "message": "உங்கள் கிடைக்கும் சான்றுகளைப் பெறும் வரை காத்திருக்கவும்..."
+      },
+      "header": {
+        "title": "{{verifierName}} இந்த சான்றுகளைக் கோருகிறது",
+        "description": "நீங்கள் பகிர விரும்பும் சான்றுகளைத் தேர்ந்தெடுக்கவும்"
+      },
+      "error": {
+        "title": "சான்றுகளை ஏற்றுவதில் பிழை",
+        "walletIdMessage": "நீங்கள் உள்நுழைந்து உங்கள் வாலட்டைத் திறந்துள்ளீர்கள் என்பதை உறுதிப்படுத்தவும்."
+      },
+      "noCredentials": {
+        "message": "சான்றுகள் கிடைக்கவில்லை"
+      },
+      "buttons": {
+        "cancel": "ரத்து செய்",
+        "consentShare": "நான் ஒப்புதல் அளித்து பகிர்கிறேன்"
+      }
+    },
+    "NoMatchingCredentialsModal": {
+      "title": "பொருந்தும் சான்றுகள் கிடைக்கவில்லை",
+      "description": "தயவுசெய்து தொடர்புடைய சான்றுகளைப் பதிவிறக்கி, பகிர்வு செயல்முறையை மீண்டும் முயற்சிக்கவும்",
+      "goToHomeButton": "முகப்புக்குச் செல்"
+    },
     "ErrorCard": {
       "defaultTitle": "பிழை",
       "defaultDescription": "ஏதோ தவறு நடந்துவிட்டது. மீண்டும் முயற்சிக்கவும்.",
