[INJIWEB-1717] - Added the LoadingModalLandscape
Signed-off-by: Rudhhi Shah <rudhhi.shah@thoughtworks.com>
Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -396,6 +396,9 @@
     "success": "يتابع",
     "cancel": "يلغي"
   },
+  "LoadingModalLandscape": {
+    "message": "جارٍ إعداد عرض بيانات اعتمادك الآمن..."
+  },
   "User": {
     "Home": {
       "title": "بيت",
