--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -396,6 +396,9 @@
     "success": "தொடரவும்",
     "cancel": "ரத்து செய்"
   },
+  "LoadingModalLandscape": {
+    "message": "உங்கள் பாதுகாப்பான அங்கீகார அறிக்கையை தயாரித்து வருகிறது..."
+  },
   "User": {
     "Home": {
       "title": "முகப்பு",
