[INJIWEB-1717] - Added CredentialShareSuccessModal component
Signed-off-by: Rudhhi Shah <rudhhi.shah@thoughtworks.com>
Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -399,6 +399,11 @@
   "LoadingModalLandscape": {
     "message": "جارٍ إعداد عرض بيانات اعتمادك الآمن..."
   },
+  "CredentialShareSuccessModal": {
+    "sharedWith": "تمت المشاركة مع {{verifierName}}",
+    "credentialsPresented": "تم تقديم بيانات اعتمادك بنجاح إلى {{verifierName}}",
+    "redirectMessage": "إعادة التوجيه إلى المحقق خلال {{count}} ثانية..."
+  },
   "User": {
     "Home": {
       "title": "بيت",
