--- a/inji-web/src/locales/fr.json
+++ b/inji-web/src/locales/fr.json
@@ -399,6 +399,11 @@
   "LoadingModalLandscape": {
     "message": "Préparation de votre présentation d’identifiants sécurisée..."
   },
+  "CredentialShareSuccessModal": {
+    "sharedWith": "Partagé avec {{verifierName}}",
+    "credentialsPresented": "Vos informations d'identification ont été présentées avec succès à {{verifierName}}",
+    "redirectMessage": "Redirection vers le vérificateur dans {{count}} secondes..."
+  },
   "User": {
     "Home": {
       "title": "Maison",
