--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -503,32 +503,6 @@
       "invalidVerifierResponse": "अमान्य सत्यापनकर्ता प्रतिक्रिया प्राप्त हुई।",
       "addTrustedVerifierError": "सत्यापनकर्ता को विश्वसनीय सूची में जोड़ने में विफल रहा।"
     },
-    "CredentialRequestModal": {
-      "loading": {
-        "title": "साख लोड हो रही है",
-        "message": "कृपया प्रतीक्षा करें जब तक हम आपकी उपलब्ध साख लाते हैं..."
-      },
-      "header": {
-        "title": "{{verifierName}} ये साख मांग रहा है",
-        "description": "उन साख का चयन करें जिन्हें आप साझा करना चाहते हैं"
-      },
-      "error": {
-        "title": "साख लोड करने में त्रुटि",
-        "walletIdMessage": "कृपया सुनिश्चित करें कि आप लॉग इन हैं और आपका वॉलेट अनलॉक है।"
-      },
-      "noCredentials": {
-        "message": "कोई साख उपलब्ध नहीं है"
-      },
-      "buttons": {
-        "cancel": "रद्द करें",
-        "consentShare": "मैं सहमत हूं और साझा करता हूं"
-      }
-    },
-    "NoMatchingCredentialsModal": {
-      "title": "कोई मिलती-जुलती साख नहीं मिली",
-      "description": "कृपया संबंधित साख डाउनलोड करें और साझाकरण प्रक्रिया को पुनः प्रयास करें",
-      "goToHomeButton": "होम पर जाएं"
-    },
     "ErrorCard": {
       "defaultTitle": "त्रुटि",
       "defaultDescription": "कुछ गलत हो गया। कृपया पुन: प्रयास करें।",
@@ -538,5 +512,31 @@
       "title": "सत्यापनकर्ता जानकारी लाई जा रही है...",
       "subtitle": "कृपया प्रतीक्षा करें जब तक हम अनुरोध को सत्यापित करते हैं और आपकी साख तैयार करते हैं।"
     }
+  },
+  "CredentialRequestModal": {
+    "loading": {
+      "title": "साख लोड हो रही है",
+      "message": "कृपया प्रतीक्षा करें जब तक हम आपकी उपलब्ध साख लाते हैं..."
+    },
+    "header": {
+      "title": "{{verifierName}} इन साखों का अनुरोध कर रहा है",
+      "description": "चुनें कि आप कौन सी साख साझा करना चाहते हैं"
+    },
+    "error": {
+      "title": "साख लोड करने में त्रुटि",
+      "walletIdMessage": "कृपया सुनिश्चित करें कि आप लॉग इन हैं और आपका वॉलेट अनलॉक है।"
+    },
+    "noCredentials": {
+      "message": "कोई साख उपलब्ध नहीं है"
+    },
+    "buttons": {
+      "cancel": "रद्द करें",
+      "consentShare": "मैं सहमत हूं और साझा करता हूं"
+    }
+  },
+  "NoMatchingCredentialsModal": {
+    "title": "कोई मिलती-जुलती साख नहीं मिली",
+    "description": "कृपया संबंधित साख डाउनलोड करें और साझाकरण प्रक्रिया को पुनः प्रयास करें",
+    "goToHomeButton": "होम पर जाएं"
   }
 }
