--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -66,7 +66,7 @@
       "loginTitle": "लॉग इन करें",
       "loginDescription": "अपने खाते से लॉग इन करें या अपनी साख तक पहुंचने के लिए अतिथि के रूप में जारी रखें।",
       "loginNote": "अतिथि मोड में कुछ सुविधाएँ सीमित हो सकती हैं।",
-      "loggingIn": "लॉगिन हो रहा है",
+      "loggingIn": "प्रवेश किया",
       "loginGoogle": "Google के साथ जारी रखें",
       "loginGuest": "अतिथि के रूप में जारी रखें"
     },
@@ -84,7 +84,7 @@
   },
   "PasscodePage": {
     "submit": "जमा करना",
-    "submitting": "प्रस्तुत करने",
+    "submitting": "भेजने से",
     "setPasscode": "शुरू करने के लिए अपना पासकोड सेट करें",
     "setPasscodeDescription": "कृपया अपने पासकोड को याद रखें या सुरक्षित रूप से संग्रहित करें। आपको हर बार वॉलेट एक्सेस करने के लिए इसकी आवश्यकता होगी।",
     "enterPasscode": "जारी रखने के लिए अपना पासकोड दर्ज करें",
