--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -67,7 +67,7 @@
       "loginDescription": "ನಿಮ್ಮ ಖಾತೆಯನ್ನು ಬಳಸಿಕೊಂಡು ಲಾಗಿನ್ ಮಾಡಿ ಅಥವಾ ನಿಮ್ಮ ಗುರುತುಗಳಿಗೆ ಪ್ರವೇಶಿಸಲು ಅತಿಥಿಯಾಗಿ ಮುಂದುವರೆಯಿರಿ.",
       "loginNote": "ಅತಿಥಿ ಮೋಡ್‌ನಲ್ಲಿ ಕೆಲವು ವೈಶಿಷ್ಟ್ಯಗಳು ಸೀಮಿತವಾಗಿರಬಹುದು.",
       "loggingIn": "ಲಾಗಿನ್ ಆಗುತ್ತಿದೆ",
-      "loginGoogle": "GOOGLE ನೊಂದಿಗೆ ಮುಂದುವರಿಯಿರಿ",
+      "loginGoogle": "Google ನೊಂದಿಗೆ ಮುಂದುವರಿಯಿರಿ",
       "loginGuest": "ಅತಿಥಿಯಾಗಿ ಮುಂದುವರಿಯಿರಿ"
     },
     "LoginFailedModal": {
@@ -424,7 +424,7 @@
     },
     "emptyScreen": {
       "title": "ಯಾವುದೇ ಕಾರ್ಡುಗಳು ಸಂಗ್ರಹಿಸಿಲ್ಲ!",
-      "actionText": "ನೀವು ಇನ್ನೂ ಯಾವುದೇ ಕಾರ್ಡ್‌ಗಳನ್ನು ಡೌನ್‌ಲೋಡ್ ಮಾಡಿಲ್ಲ. ಪ್ರಾರಂಭಿಸಲು \"ಕಾರ್ಡ್ ಸೇರಿಸಿ\" ಟ್ಯಾಪ್ ಮಾಡಿ."
+      "actionText": "ನೀವು ಇನ್ನೂ ಯಾವುದೇ ಕಾರ್ಡ್‌ಗಳನ್ನು ಡೌನ್‌ಲೋಡ್ ಮಾಡಿಲ್ಲ. ಪ್ರಾರಂಭಿಸಲು \"ಕಾರ್ಡ್‌ಗಳನ್ನು ಸೇರಿಸಿ\" ಟ್ಯಾಪ್ ಮಾಡಿ."
     },
     "search": {
       "placeholder": "ಹೆಸರಿನ ಮೂಲಕ ನಿಮ್ಮ ಕಾರ್ಡ್‌ಗಳನ್ನು ಹುಡುಕಿ",
