--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -67,8 +67,8 @@
       "loginDescription": "உங்கள் கணக்கில் உள்நுழையவோ அல்லது உங்கள் சான்றுகளுக்கு அணுக விருந்தினராக தொடரவோ செய்யுங்கள்.",
       "loginNote": "விருந்தினர் பயன்முறையில் சில அம்சங்கள் கட்டுப்படுத்தப்பட்டிருக்கலாம்.",
       "loggingIn": "உள்நுழைகிறது",
-      "loginGoogle": "GOOGLE உடன் தொடரவும்",
-      "loginGuest": "விருந்தினராகத் தொடரவும்"
+      "loginGoogle": "Google உடன் தொடரவும்",
+      "loginGuest": "விருந்தினராக தொடரவும்"
     },
     "LoginFailedModal": {
       "failureMessage": "உள்நுழைவு தோல்வி",
@@ -424,7 +424,7 @@
     },
     "emptyScreen": {
       "title": "எந்த அட்டைகளும் சேமிக்கப்படவில்லை!",
-      "actionText": "நீங்கள் இன்னும் எந்த அட்டைகளையும் பதிவிறக்கவில்லை. தொடங்குவதற்கு \"கார்டுகளைச் சேர்\" என்பதைத் தட்டவும்."
+      "actionText": "நீங்கள் இன்னும் எந்த அட்டைகளையும் பதிவிறக்கவில்லை. தொடங்குவதற்கு \"கார்டுகளைச் சேர்க்கவும்\" என்பதைத் தட்டவும்."
     },
     "search": {
       "placeholder": "உங்கள் அட்டைகளை பெயர் மூலம் தேடுங்கள்",
