--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -67,8 +67,8 @@
       "loginDescription": "قم بتسجيل الدخول باستخدام حسابك أو تابع كضيف للوصول إلى بيانات الاعتماد الخاصة بك.",
       "loginNote": "قد تكون بعض الميزات محدودة في وضع الضيف.",
       "loggingIn": "تسجيل الدخول",
-      "loginGoogle": "متابعة مع جوجل",
-      "loginGuest": "استمر كضيف"
+      "loginGoogle": "تواصل مع جوجل",
+      "loginGuest": "الاستمرار كضيف"
     },
     "LoginFailedModal": {
       "failureMessage": "فشل تسجيل الدخول",
